# reading-room

./: README.md  pyproject.toml  zensical.toml
.github/: .yamllint.yml  dependabot.yml  lychee.toml
.github/workflows/: deploy-zensical.yml  links.yml
docs/: index.md
